--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 
 [workspace.dependencies]
 # Core computation
-ndarray = "0.16"
+ndarray = "0.17.2"
 rayon = "1.10"
 rustfft = "6.2"
 num-complex = "0.4"
@@ -26,10 +26,10 @@ anyhow = "1"
 
 # CLI
 clap = { version = "4", features = ["derive"] }
-indicatif = "0.17"
+indicatif = "0.18.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
-toml = "0.8"
+toml = "0.9.12+spec-1.1.0"
