--- a/crates/jupiter-cli/Cargo.toml
+++ b/crates/jupiter-cli/Cargo.toml
@@ -3,6 +3,7 @@ name = "jupiter-cli"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+build = "build.rs"
 
 [[bin]]
 name = "jupiter"
