add toml file to play with configurations and coloring for the console

--- a/crates/jupiter-cli/Cargo.toml
+++ b/crates/jupiter-cli/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 [dependencies]
 jupiter-core = { path = "../jupiter-core" }
 clap = { workspace = true }
+console = { workspace = true }
 indicatif = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
