--- a/crates/jupiter-core/Cargo.toml
+++ b/crates/jupiter-core/Cargo.toml
@@ -4,6 +4,10 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+default = []
+gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
+
 [dependencies]
 ndarray = { workspace = true }
 rayon = { workspace = true }
@@ -16,6 +20,9 @@ memmap2 = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 serde = { workspace = true }
+wgpu = { workspace = true, optional = true }
+pollster = { version = "0.4", optional = true }
+bytemuck = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
 approx = "0.5"
