--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,7 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
-toml = "0.9.12+spec-1.1.0"
+toml = "1.0.0+spec-1.1.0"
+
+# GPU compute
+wgpu = "24"
