--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["crates/jupiter-core", "crates/jupiter-cli"]
+members = ["crates/jupiter-core", "crates/jupiter-cli", "crates/jupiter-gui"]
 
 [workspace.package]
 version = "0.1.0"
@@ -34,6 +34,12 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 # Serialization
 serde = { version = "1", features = ["derive"] }
 toml = "1.0.0+spec-1.1.0"
+
+# GUI
+eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"] }
+egui-wgpu = "0.33"
+egui = "0.33"
+rfd = "0.15"
 
 # GPU compute
 wgpu = "28"
