--- a/crates/jupiter-gui/Cargo.toml
+++ b/crates/jupiter-gui/Cargo.toml
@@ -23,3 +23,4 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 toml = { workspace = true }
+rayon = { workspace = true }
