--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ eframe = { version = "0.33", default-features = false, features = [
 ] }
 egui-wgpu = "0.33"
 egui = "0.33"
+egui_plot = "0.34"
 rfd = "0.17"
 
 # GPU compute
