--- a/crates/jupiter-gui/Cargo.toml
+++ b/crates/jupiter-gui/Cargo.toml
@@ -16,6 +16,7 @@ gpu = ["jupiter-core/gpu"]
 jupiter-core = { path = "../jupiter-core" }
 eframe = { workspace = true }
 egui = { workspace = true }
+egui_plot = { workspace = true }
 egui-wgpu = { workspace = true }
 rfd = { workspace = true }
 anyhow = { workspace = true }
