--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           components: clippy
       - uses: Swatinem/rust-cache@v2
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libwayland-dev pkg-config libxkbcommon-dev
+        run: sudo apt-get update && sudo apt-get install -y libwayland-dev libx11-dev libxcb1-dev libxrandr-dev libxinerama-dev libxi-dev pkg-config libxkbcommon-dev
       - name: Clippy (CPU)
         run: cargo clippy --all-targets -- -D warnings
       - name: Clippy (GPU)
@@ -44,7 +44,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libwayland-dev pkg-config libxkbcommon-dev
+        run: sudo apt-get update && sudo apt-get install -y libwayland-dev libx11-dev libxcb1-dev libxrandr-dev libxinerama-dev libxi-dev pkg-config libxkbcommon-dev
       - name: Test (CPU)
         run: cargo test -p jupiter-core
       - name: Test (GPU)
@@ -69,7 +69,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Install system dependencies
         if: matrix.install-deps
-        run: sudo apt-get update && sudo apt-get install -y libwayland-dev pkg-config libxkbcommon-dev
+        run: sudo apt-get update && sudo apt-get install -y libwayland-dev libx11-dev libxcb1-dev libxrandr-dev libxinerama-dev libxi-dev pkg-config libxkbcommon-dev
       - name: Build (CPU)
         run: cargo build --workspace
       - name: Build (GPU)
