--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libwayland-dev pkg-config libxkbcommon-dev
+        run: sudo apt-get update && sudo apt-get install -y libwayland-dev libx11-dev libxcb1-dev libxrandr-dev libxinerama-dev libxi-dev pkg-config libxkbcommon-dev
 
       - name: Build CPU release
         run: cargo build --release --workspace
